// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage renders error message after receiving props 1`] = `
<div
  className="reactist_error_message"
>
  <p>
    second message
  </p>
  <div
    className="dismiss_icon"
    onClick={[Function]}
  />
</div>
`;

exports[`ErrorMessage renders nothing after receiving an empty new message 1`] = `""`;

exports[`ErrorMessage renders nothing if message is empty 1`] = `""`;

exports[`ErrorMessage renders nothing if message is not set 1`] = `""`;

exports[`ErrorMessage renders the given message 1`] = `
<div
  className="reactist_error_message"
>
  <p>
    Oh noes
  </p>
  <div
    className="dismiss_icon"
    onClick={[Function]}
  />
</div>
`;
